--- a/src/Gateway.Api/Gateway.Api.csproj
+++ b/src/Gateway.Api/Gateway.Api.csproj
@@ -13,8 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
-      <ProjectReference Include="..\Ordering.Infrastructure\Ordering.Infrastructure.csproj" />
+      <ProjectReference Include="..\Ordering\Ordering.Contract\Ordering.Contract.csproj" />
     </ItemGroup>
 
 </Project>
