--- a/src/Gateway.Api/Gateway.Api.csproj
+++ b/src/Gateway.Api/Gateway.Api.csproj
@@ -9,11 +9,11 @@
     <ItemGroup>
         <PackageReference Include="MassTransit" Version="8.0.8" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
-      <ProjectReference Include="..\Ordering.Infrastructure\Ordering.Infrastructure.csproj" />
+      <ProjectReference Include="..\Ordering\Ordering.Contract\Ordering.Contract.csproj" />
     </ItemGroup>
 
 </Project>
