--- a/src/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/src/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -1,14 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Ordering.Contract\Ordering.Contract.csproj" />
-      <ProjectReference Include="..\Ordering.Domain\Ordering.Domain.csproj" />
+        <PackageReference Include="MassTransit.Abstractions" Version="8.0.8" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <ProjectReference Include="..\Ordering.Contract\Ordering.Contract.csproj" />
+        <ProjectReference Include="..\Ordering.Domain\Ordering.Domain.csproj" />
     </ItemGroup>
 
 </Project>
