Add mongo settings

--- a/src/Ordering/Ordering.Api/appsettings.Development.json
+++ b/src/Ordering/Ordering.Api/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "MongoEventDatabase": {
+    "Url": "mongodb://mongodb0.example.com:27017",
+    "Database": "OrderingEventsDB"
+  },
+  "MongoReadDatabase": {
+    "Url": "mongodb://mongodb0.example.com:27017",
+    "Database": "OrderingReadDB"
   }
 }
