--- a/src/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/src/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
     
     <ItemGroup>
+        <PackageReference Include="MassTransit" Version="8.0.8" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
         <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     </ItemGroup>
     
