--- a/src/Ordering/Ordering.Api/appsettings.Example.json
+++ b/src/Ordering/Ordering.Api/appsettings.Example.json
@@ -1,10 +1,10 @@
 {
     "MongoEventDatabase": {
-        "Url": "mongodb://mongodb0.example.com:27017",
+        "Url": "mongodb://localhost:27017",
         "Database": "OrderingEventsDB"
     },
     "MongoReadDatabase": {
-        "Url": "mongodb://mongodb0.example.com:27017",
+        "Url": "mongodb://localhost:27017",
         "Database": "OrderingReadDB"
     }
 }
