--- a/src/Gateway/Gateway.Api/Gateway.Api.csproj
+++ b/src/Gateway/Gateway.Api/Gateway.Api.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Ordering\Ordering.Contract\Ordering.Contract.csproj" />
+      <ProjectReference Include="..\..\Ordering\Ordering.Contract\Ordering.Contract.csproj" />
     </ItemGroup>
 
 </Project>
