--- a/src/Gateway/Gateway.Api/Gateway.Api.csproj
+++ b/src/Gateway/Gateway.Api/Gateway.Api.csproj
@@ -9,9 +9,16 @@
     <ItemGroup>
         <PackageReference Include="MassTransit" Version="8.0.8" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol.Logs" Version="1.4.0-rc.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="OpenTelemetry" Version="1.4.0-rc.2" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.4.0-rc.2" />
+        <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.3.0-rc.2" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.4.0-rc.2" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.11" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.11" />
     </ItemGroup>
-
+    
     <ItemGroup>
       <ProjectReference Include="..\..\Ordering\Ordering.Contract\Ordering.Contract.csproj" />
     </ItemGroup>
