--- a/src/Ordering/Ordering.Api/Ordering.Api.csproj
+++ b/src/Ordering/Ordering.Api/Ordering.Api.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
     
     <ItemGroup>
+        <PackageReference Include="MassTransit" Version="8.0.8" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
         <PackageReference Include="OpenTelemetry" Version="1.4.0-rc.2" />
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.4.0-rc.2" />
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol.Logs" Version="1.4.0-rc.2" />
