--- a/.github/workflows/ordering-cicd.yml
+++ b/.github/workflows/ordering-cicd.yml
@@ -27,14 +27,14 @@ jobs:
       - name: Log in to container registry
         uses: docker/login-action@v1
         with:
-          registry: ${{ secrets.DEV_CONTAINER_REGISTRY_URL }}
-          username: ${{ secrets.DEV_CONTAINER_REGISTRY_USERNAME }}
-          password: ${{ secrets.DEV_CONTAINER_REGISTRY_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push container image to registry
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DEV_CONTAINER_REGISTRY_URL }}/ordering:${{ github.sha }}
+          tags: ghcr.io/${{ github.repository }}/${{ github.ref_name }}-ordering:${{ github.sha }}
           file: ./src/Ordering/Dockerfile
           context: ./
