--- a/.github/workflows/gateway-cicd.yml
+++ b/.github/workflows/gateway-cicd.yml
@@ -16,14 +16,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    env:
-      TIMESTAMP: ${{ steps.set_timestamp.outputs.timestamp }}
 
     steps:
-      - name: Set Unix timestamp
-        id: set_timestamp
-        run: echo "::set-output name=timestamp::$(date +%s)"
+      - name: Get timestamp
+        id: timestamp
+        run: echo "::set-output name=timestamp::$(date +'%s')"
         
       - name: Checkout to the branch
         uses: actions/checkout@v2
@@ -47,6 +44,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ghcr.io/${{ github.repository }}/gateway:${{ github.ref_name }}-${{ github.sha }}-${{ env.TIMESTAMP }}
+          tags: ghcr.io/${{ github.repository }}/gateway:${{ github.ref_name }}-${{ github.sha }}-${{ steps.timestamp.outputs.timestamp }}
           file: ./src/Gateway/Dockerfile
           context: ./
