Refactor rabbitmq settings

--- a/src/Ordering/Ordering.Api/appsettings.Development.json
+++ b/src/Ordering/Ordering.Api/appsettings.Development.json
@@ -6,5 +6,10 @@
   "MongoReadDatabase": {
     "Url": "mongodb://localhost:27017",
     "Database": "OrderingReadDB"
+  },
+  "RabbitMq": {
+    "Host": "cluster.rabbitmq.svc.cluster.local",
+    "Username": "default_user_DiWVUL01FFVg0xtGWhW",
+    "Password": "z2yGSiiN4m2grNWdkM-DZhrNF8aRCKKr"
   }
 }
